@@ -1,0 +1,25 @@
+/* -*- C++ -*- */
+/**
+ * @file Swap.cpp
+ *
+ * $Id$
+ *
+ * @author Carlos O'Ryan <coryan@uci.edu>
+ */
+
+#ifndef ACE_SWAP_C
+#define ACE_SWAP_C
+
+#include "ace/Swap.h"
+
+#if !defined (ACE_LACKS_PRAGMA_ONCE)
+# pragma once
+#endif /* ACE_LACKS_PRAGMA_ONCE */
+
+#if !defined (__ACE_INLINE__)
+#include "ace/Swap.inl"
+#endif /* __ACE_INLINE__ */
+
+ACE_RCSID(ace, Swap, "$Id$")
+
+#endif /* ACE_SWAP_C */
